<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/bottom_navigation_loan"
        android:icon="@drawable/ic_loan_black"
        android:title="@string/title_loan" />

    <item
        android:id="@+id/bottom_navigation_investment"
        android:icon="@drawable/ic_invesment_black"
        android:title="@string/title_investment" />

    <item
        android:id="@+id/bottom_navigation_tax"
        android:icon="@drawable/ic_tax_black"
        android:title="@string/title_tax" />

    <item
        android:id="@+id/bottom_navigation_user"
        android:icon="@drawable/ic_accuser_black"
        android:title="@string/title_user" />

</menu>
