<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_exitdialog_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tv_exitdialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogExitMessage"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogNoBtn"
            android:text="@string/dialogCancelBtn"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogYesBtn"
            android:text="@string/dialogOkBtn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_width="80dp"
            android:layout_height="40dp"
            app:cornerRadius="20dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"/>

    </LinearLayout>

</LinearLayout>