<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.investment.fixDeposit.FdContentFragment">


    <LinearLayout
        android:id="@+id/ll_fd_fd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fix_depo_prin_amt_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fix_depo_prin_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fd_pa"
                android:singleLine="true"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fdTenure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:hint="@string/fd_ten"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fdTenure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/swt_fd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"/>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fix_depo_int_rate_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fix_depo_int_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fd_ir"
                android:singleLine="true"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fd_compounding" />

        <Spinner
            android:id="@+id/fixeddeposit_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/fixeddeposit_arrays" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_fd_calc"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:elevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/calc_button_tint"
            android:text="@string/fd_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/fix_depo_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/fd_ti" />

            <TextView
                android:id="@+id/fix_depo_tot_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fd_ti"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/fd_mv" />

            <TextView
                android:id="@+id/fix_depo_mat_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/fd_mv"
                android:textStyle="bold" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/btn_viewdocs_fd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_viewdocs_bold"
                    android:tint="@color/calc_button_tint"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/btn_icon"/>

                <ImageButton
                    android:id="@+id/btn_share_fd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    android:tint="@color/calc_button_tint"
                    android:layout_weight="1"
                    android:backgroundTint="@color/btn_icon"/>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fd_rd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rec_depo_mon_inv_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rec_depo_mon_inv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rd_mi"
                android:singleLine="true"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rd_ten" />

        <Spinner
            android:id="@+id/rec_depo_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/recurringdeposit_arrays" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rec_depo_int_rate_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rec_depo_int_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rd_ir"
                android:singleLine="true"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rd_compounding" />

        <Spinner
            android:id="@+id/recurringdeposit_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/recdepo_arrays" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rec_depo_calculate"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/calc_button_tint"
            android:text="@string/rd_btn"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:elevation="5dp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/rec_depo_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/rd_ia" />

            <TextView
                android:id="@+id/rec_depo_inv_amt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/rd_ia"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/rd_ti" />

            <TextView
                android:id="@+id/rec_depo_tot_int"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/rd_ti"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/rd_mv" />

            <TextView
                android:id="@+id/rec_depo_mat_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/rd_mv"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_share_rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_share"
                android:tint="@color/calc_button_tint"
                android:backgroundTint="@color/btn_icon"/>




        </LinearLayout>



    </LinearLayout>

</FrameLayout>